--- a/webpage/css/style.css
+++ b/webpage/css/style.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #00109cdc;
+    background-color: rgb(1, 78, 170);
 }
 
 .container {
@@ -15,7 +15,7 @@ body {
 }
 
 .logo img {
-    width: 150px; 
+    width: 300px; 
 }
 
 .description p {
