--- a/MVP/src/main/webapp/css/style.css
+++ b/MVP/src/main/webapp/css/style.css
@@ -1,12 +1,78 @@
-/* styles.css */
-body {
+@import url('https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+    --color-azul:#014eaa;
+    --color-blanco:#ffffff;
+    
+    --fuente-principal:"Montserrat", sans-serif;
+    --fuente-secundaria:"Roboto", sans-serif;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#cabecera {
+    background-color: var(--color-azul);
+    color: var(--color-blanco);
+    font-family: var(--fuente-principal);
+    padding-top: 15px;
+    padding-bottom: 5px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+#busqueda {
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
     margin: 0;
-    background-color: rgb(1, 78, 170);
+    flex-direction: column;
+}
+
+.contenedor {
+    max-width: 100%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.ajustar-imagen {
+    max-width: 100%;
+    height: auto;
+}
+
+.navbar-brand {
+	width: 200px;
+}
+
+.navbar-collapse {
+	justify-content: flex-start;
+}
+
+.nav-link {
+    font-size: 16px;
+	background-color: var(--color-rojo);
+	color: var(--color-humo);
+	margin: 0px 5px;
+	border-radius: 10px;
+	transition: all 0.3s ease-in-out;
+}
+
+.btn-white {
+    white-space: nowrap;
+}
+
+.nav-link:hover {
+	background-color: var(--color-plomo);
+	color: var(--color-humo);
 }
 
 .container {
@@ -91,7 +157,15 @@ footer p {
     font-size: 14px;
 }
 
+.active {
+	background-color: var(--color-plomo);
+	color: var(--color-humo)!important;
+}
 
-
-
-
+.fila {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+}
