--- a/MVP/src/main/webapp/css/style.css
+++ b/MVP/src/main/webapp/css/style.css
@@ -1,171 +1,172 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
-    --color-azul:#014eaa;
-    --color-blanco:#ffffff;
-    
-    --fuente-principal:"Montserrat", sans-serif;
-    --fuente-secundaria:"Roboto", sans-serif;
+  --color-azul: #014eaa;
+  --color-blanco: #ffffff;
+
+  --fuente-principal: "Montserrat", sans-serif;
+  --fuente-secundaria: "Roboto", sans-serif;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #cabecera {
-    background-color: var(--color-azul);
-    color: var(--color-blanco);
-    font-family: var(--fuente-principal);
-    padding-top: 15px;
-    padding-bottom: 5px;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+  background-color: var(--color-azul);
+  color: var(--color-blanco);
+  font-family: var(--fuente-principal);
+  padding-top: 15px;
+  padding-bottom: 5px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 #busqueda {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-    margin: 0;
-    flex-direction: column;
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 85vh;
+  margin: 0;
+  flex-direction: column;
+  background-color: var(--color-azul);
 }
 
 .contenedor {
-    max-width: 100%;
-    margin-left: 5%;
-    margin-right: 5%;
+  max-width: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .ajustar-imagen {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .navbar-brand {
-	width: 200px;
+  width: 200px;
 }
 
 .navbar-collapse {
-	justify-content: flex-start;
+  justify-content: flex-start;
 }
 
 .nav-link {
-    font-size: 16px;
-	background-color: var(--color-rojo);
-	color: var(--color-humo);
-	margin: 0px 5px;
-	border-radius: 10px;
-	transition: all 0.3s ease-in-out;
+  font-size: 16px;
+  background-color: var(--color-rojo);
+  color: var(--color-humo);
+  margin: 0px 5px;
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
 }
 
 .btn-white {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .nav-link:hover {
-	background-color: var(--color-plomo);
-	color: var(--color-humo);
+  background-color: var(--color-plomo);
+  color: var(--color-humo);
 }
 
 .container {
-    text-align: center;
-    padding: 20px;    
+  text-align: center;
+  padding: 20px;
 }
 
 .logo img {
-    width: 300px; 
+  width: 300px;
 }
 
 .description p {
-    font-size: 18px;
-    color: #0a0606;
-    margin: 10px 0;
+  font-size: 18px;
+  color: #0a0606;
+  margin: 10px 0;
 }
 
 .search-bar {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .search-bar input {
-    padding: 10px;
-    font-size: 16px;
-    width: 70%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-right: 10px;
+  padding: 10px;
+  font-size: 16px;
+  width: 70%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 10px;
 }
 
 .search-bar button {
-    padding: 10px 20px;
-    font-size: 16px;
-    color: white;
-    background-color: #007BFF;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .search-bar button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 footer {
-    background-color: #f8f8f8;
-    padding: 10px 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    box-shadow: 0 -2px 5px rgba(223, 12, 12, 0.1);
+  background-color: #f8f8f8;
+  padding: 10px 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  box-shadow: 0 -2px 5px rgba(223, 12, 12, 0.1);
 }
 
 .footer-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  flex-wrap: wrap;
 }
 
 .footer-nav {
-    display: flex;
+  display: flex;
 }
 
 .footer-nav a {
-    margin-left: 20px;
-    color: #007BFF;
-    text-decoration: none;
-    font-size: 14px;
+  margin-left: 20px;
+  color: #007bff;
+  text-decoration: none;
+  font-size: 14px;
 }
 
 footer p {
-    margin: 0;
-    color: #555;
-    font-size: 14px;
+  margin: 0;
+  color: #555;
+  font-size: 14px;
 }
 
 .active {
-	background-color: var(--color-plomo);
-	color: var(--color-humo)!important;
+  background-color: var(--color-plomo);
+  color: var(--color-humo) !important;
 }
 
 .fila {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-left: -15px;
-    margin-right: -15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
 }
